working version v1.1